# util

./: .gitignore  CMakeLists.txt
dependencies/: BoostLoader.cmake
test-executable/: CMakeLists.txt
test_executable/: CMakeLists.txt
util/type_util/: type_util.hpp
util/variable_util/: referable_unique.hpp  variable_util.hpp  variable_util_includes.h
